[package]
name = "fddf"
version = "1.5.0"
authors = ["Georg Brandl <georg@python.org>"]
description = "Fast, parallelized duplicate file finder."
repository = "https://github.com/birkenfeld/fddf"
keywords = ["duplicate", "dupes"]
license = "MIT/Apache-2.0"
edition = "2018"

[profile.release]
lto = true

[dependencies]
structopt = "0.3.3"
walkdir = "2.2.9"
scoped-pool = "1.0.0"
num_cpus = "1.10.1"
blake2 = "0.8.1"
fnv = "1.0.6"
unbytify = "0.2.0"
regex = "1.3.1"
glob = "0.3.0"
